# MongoTurbo

./: .dockerignore  Cargo-withmongo.toml  Cargo.toml  Dockerfile  docker-compose.yml
WebApplication/: WebApp.sln
WebApplication/WebApplication/: Program.cs  WebApp.csproj  appsettings.json
WebApplication/WebApplication/Controllers/: HighLoadTestController .cs  WeatherForecastController.cs
WebApplication/WebApplication/Properties/: launchSettings.json
WebApplication/WebApplication/Services/: MongoTurboService.cs  RedisService.cs  RustCacheClient.cs
src/: main-withmongo.rs  main.rs
