[package]
name = "rust-distributed-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }  # Async runtime
tokio-util = { version = "0.7", features = ["codec"] }  # TCP Framing
rocksdb = "0.21"  # RocksDB persistence
dashmap = "5.4"  # Lock-free concurrent map
serde = { version = "1.0", features = ["derive"] }  # Serialization
serde_json = "1.0"  # JSON handling
bytes = "1.4"  # Efficient byte buffers
futures = "0.3"  # Async utilities
crossbeam = "0.8"  # Lock-free concurrency
